// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketTrades renders successfully with empty trades 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 0,
            "marginLeft": 16,
            "marginRight": 16,
            "marginTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#c6c4c4",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 60,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "left",
                },
              ]
            }
            textAlign="left"
          >
            Time
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            textAlign="center"
          >
            Price
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "right",
                },
              ]
            }
            textAlign="right"
          >
            Amount
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`MarketTrades renders successfully with trades 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 0,
            "marginLeft": 16,
            "marginRight": 16,
            "marginTop": 0,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomColor": "#c6c4c4",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 60,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "left",
                },
              ]
            }
            textAlign="left"
          >
            Time
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            textAlign="center"
          >
            Price
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#c6c4c4",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "right",
                },
              ]
            }
            textAlign="right"
          >
            Amount
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomColor": "#c6c4c4",
                "borderBottomWidth": 0.5,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "left",
                  },
                ]
              }
              textAlign="left"
            >
              2:22:10 pm
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "center",
                  },
                ]
              }
              textAlign="center"
            >
              $ 10.0
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "right",
                  },
                ]
              }
              textAlign="right"
            >
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomColor": "#c6c4c4",
                "borderBottomWidth": 0.5,
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "left",
                  },
                ]
              }
              textAlign="left"
            >
              2:22:10 pm
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "center",
                  },
                ]
              }
              textAlign="center"
            >
              $ 10.0
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontSize": 18,
                    "textAlign": "right",
                  },
                ]
              }
              textAlign="right"
            >
              2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
